# soon-lib

./: README.md  pyproject.toml
soon/: __init__.py  __main__.py  exceptions.py
soon/application/: __init__.py  use_case.py
soon/domain/: __init__.py  entity.py  entity.pyi  factory.py  factory.pyi  value_object.py  value_object.pyi
soon/domain/useful/: email.py
soon/infrastructure/: __init__.py  context.py  controller.py  prerequisite.py  settings.py
soon/infrastructure/resources/: __init__.py  basis.py  http.py
soon/utils/: __init__.py  asynchronous.py  binder.py  token.py  toml.py  wrapper.py
